x.y.z
=====

New features:

Bug fixes:

Other:

1.17.0
======

New features:

* Fix GitHub Issue #50: Autoarrange Nodes
  - Implements a layout optimizer based on combinatorial optimization
  - Adds a new menu entry 'Edit => Optimize layout'

Bug fixes:

* Fix GitHub Issue #88: Crash when opening a new file in a certain scenario
* Fix GitHub Issue #89: Default Right-to-Left Text 

1.16.0
======

New features:

* Fix GitHub Issue #83: Add option to copy-drag nodes
  - By checking "Copy on drag" checkbox on the toolbar
    one can copy a node just by dragging a new connected node

* Add Ctrl+0 as shortcut for zoom to fit

Bug fixes:

* Fix GitHub Issue #70: Edge tries to reposition while moving a group

Other:

* Make the Full Screen menu action checkable to avoid confusion

* General code refactoring

* Upgraded to C++14

1.15.1
======

Other:

* Update Italian translations
* Use Argengine as the CLI argument parser

1.15.0
======

New features:

* Fix Github Issue #9: Show list of recent files
  
Bug fixes:

* Fix Github Issue #79: What's new view is editable 

1.14.0
======

New features:

* Add What's New dialog
  - Help => What's New
* Fix Github Issue #41: Allow nodes to be resized horizontally
  - Nodes will now automatically scale also horizontally by the text width

1.13.1
======

Bug fixes:

* Fix GitHub Issue #75: Unpredictable crash on delete node via context menu

1.13.0
======

Bug fixes:

* Fix GitHub Issue #72: UTF-8 saving not working (on Windows)
* Fix GitHub Issue #73: Extra newlines on Windows 

Other:

* Add --debug and turn some info logs into debug logs

1.12.0
======

New features:

* Fix GitHub Issue #67: Button to drag cards

* Fix GitHub Issue #66: Add fullscreen option
  * There's now View => Full Screen

* Fix GitHub Issue #51: Insert Images Into Nodes
  * Node context menu now includes "Attach image" and "Remove attached image"
  * The attached image will be set as the background image of the node