@@ -3,6 +3,8 @@ x.y.z
 
 New features:
 
+* Add a shortcut Ctrl+Shift+F to create new floating nodes
+
 Bug fixes:
 
 Other:
